GeglNode: Stop listening to signals from proxy nodes after destruction

https://bugzilla.gnome.org/show_bug.cgi?id=759995